fix word break in dash nav

--- a/pages/products/dash/dash.styles.scss
+++ b/pages/products/dash/dash.styles.scss
@@ -52,6 +52,7 @@
       text-transform: uppercase;
       letter-spacing:2px;
       padding-left:$gutter;
+      white-space:nowrap;
       @include trans;
       text-shadow: $text-shadow-default;
       &:hover{
